log
Mon, May  5, 2025  3:43:54 AM: 
 tests:  1|8
total_score: 0/70
5729e4d
Mon, May  5, 2025  3:57:10 AM: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
43330e3
Mon, May  5, 2025  4:09:30 AM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|7
total_score: 5/70
00972a7
Mon, May  5, 2025  4:18:06 AM: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:84:13: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if (lower_than(key, tree->current->pair->key))
             ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
b91aa39
Mon, May  5, 2025  4:19:01 AM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
e1da651
Mon, May  5, 2025  4:24:56 AM: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:88:9: error: this 'else' clause does not guard... [-Werror=misleading-indentation]
         else
         ^~~~
treemap.c:90:13: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'else'
             return temp->pair;
             ^~~~~~
cc1.exe: all warnings being treated as errors
680a2d1
